2006-08-29 Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui.Pads/OpenTaskView.cs: Make the toolbar smaller
	  and add some spacing.
	* MonoDevelop.Ide.mdp: Removed unused file.
	* MonoDevelop.Ide.Gui/Document.cs: Unsubscribe ActiveViewContentChanged
	  event when the window is closed.
	* MonoDevelop.Ide.Gui/Workbench.cs: Fixed error message.
	* MonoDevelop.Ide.Gui/SdiWorkspaceWindow.cs: Added some missing Destroys().
	* MonoDevelop.Ide.Gui/SdiWorkspaceLayout.cs: Unsubscribe events to avoid
	  memory leaks.

2006-08-22 Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui.Pads.ClassPad/NamespaceNodeBuilder.cs: Fixed
	  exception when trying to update an empty tree.
	* MonoDevelop.Ide.Gui/Workbench.cs: Don't crash if a file load fails.
	* MonoDevelop.Ide.Gui/SdiWorkspaceWindow.cs: Route commands through
	  the view, before routing to the parent.
	  
	* MonoDevelop.Ide.Gui.Dialogs/SelectReferenceDialog.cs:
	* MonoDevelop.Ide.Gui.Dialogs/AssemblyReferencePanel.cs:
	* MonoDevelop.Ide.Gui.Dialogs/GacReferencePanel.cs:
	* MonoDevelop.Ide.Gui.Dialogs/ProjectReferencePanel.cs: Several fixes
	  and code refactoring that closes bug #79099.

2006-08-10 Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui.Dialogs/FileSelectorDialog.cs: Don't show
	  the encoding selector when a folder is selected.

2006-08-10  Scott Ellington  <scott.ellington@gmail.com>

	* MonoDevelop.Ide.Gui/IViewContent.cs: add StockIconId property
	* MonoDevelop.Ide.Gui/AbstractViewContent.cs: implement ^^
	* MonoDevelop.Ide.Gui/SdiWorkspaceWindow.cs: use StockIconId
	* MonoDevelop.Ide.Gui/SdiWorkspaceLayout.cs: use StockIconId

2006-08-08 Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Commands/ProjectCommands.cs: Added deploy command.
	  Build the project before deploying.
	* MonoDevelop.Ide.Gui.Pads/TreeViewPad.cs: Set the pad as command
	  target when showing the context menu. Fixes bug #76141.
	* MonoDevelop.Ide.Gui.Pads/OpenTaskView.cs: Added null check.