@@ -614,15 +614,17 @@ namespace MonoDevelop.Ide.Gui
 		{
 			try {
 				newContent = binding.CreateContentForFile (fileName);
-				if (newContent == null)
+				if (newContent == null) {
+					fileInfo.ProgressMonitor.ReportError (GettextCatalog.GetString ("The file '{0}' could not be opened.", fileName), null);
 					return;
+				}
 
 				if (fileInfo.Encoding != null && newContent is IEncodedTextContent)
 					((IEncodedTextContent)newContent).Load (fileName, fileInfo.Encoding);
 				else
 					newContent.Load (fileName);
 			} catch (Exception ex) {
-				IdeApp.Services.MessageService.ShowError (ex, GettextCatalog.GetString ("The file '{0}' could not be opened.", fileName));
+				fileInfo.ProgressMonitor.ReportError (GettextCatalog.GetString ("The file '{0}' could not be opened.", fileName), ex);
 				return;
 			}
 
